--- a/css/footer-distributed-with-contact-form.css
+++ b/css/footer-distributed-with-contact-form.css
@@ -1,9 +1,3 @@
-footer {
-   position:absolute;
-   /*bottom:0;*/
-   height:300px;   /* Height of the footer */
-   background:#6cf;
-}
 .footer-distributed{
 	background-color: #292c2f;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -154,8 +148,8 @@ footer {
 
 /* If you don't want the footer to be responsive, remove these media queries */
 
-@media (max-width: 1177px) {
-
+@media (max-width: 1336px) {
+	
 	.footer-distributed {
 		font: bold 14px sans-serif;
 	}
@@ -174,15 +168,15 @@ footer {
 	}
 }
 
-@media (max-width: 967px) {
+@media (max-width: 1145px) {
 
 	.footer-distributed{
 		padding: 30px;
+		bottom: auto;
 	}
 
 	.footer-distributed .footer-left,
 	.footer-distributed .footer-right{
-		float: none;
 		max-width: 300px;
 		margin: 0 auto;
 	}
@@ -191,7 +185,7 @@ footer {
 		margin-bottom: 40px;
 	}
 
-	.footer-distributed form{
+	.footer-distributed form {
 		margin-top: 30px;
 	}
 
@@ -202,10 +196,11 @@ footer {
 	.footer-distributed form button{
 		float: none;
 	}
-	footer {
-	   position:absolute;
-	   bottom:0;
-	   height:620px;   /* Height of the footer */
-	   background:#6cf;
+}
+@media (max-width: 609px) {
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-right{
+    float: none;
+    max-width: 250px;
 	}
 }
